Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-11942

[C++] If tasks are submitted quickly the thread pool may fail to spin up new threads

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 4.0.0
    • C++

    Description

      Probably only really affects unit tests.  Consider an idle thread pool with 1 thread (ready_count_ == 1).  If `Spawn` is called very quickly it may look like `ready_count_` is still greater than 0 (because `ready_count_` doesn't necessarily decrement by the time `Spawn` returns) and so it will not spin up new threads.

      Attachments

        Issue Links

          Activity

            People

              westonpace Weston Pace
              westonpace Weston Pace
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 40m
                  40m