ARROW-11942: [C++] If tasks are submitted quickly the thread pool may fail to spin up new threads

Probably only really affects unit tests.  Consider an idle thread pool with 1 thread (ready_count_ == 1).  If `Spawn` is called very quickly it may look like `ready_count_` is still greater than 0 (because `ready_count_` doesn't necessarily decrement by the time `Spawn` returns) and so it will not spin up new threads.

Also, added a `GatingTask` utility which can be used to reduce the sleeps in a test and make them more reliable.

Closes #9684 from westonpace/feature/arrow-11942

Authored-by: Weston Pace <weston.pace@gmail.com>
Signed-off-by: Antoine Pitrou <antoine@python.org>